Update the Github

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -31,6 +31,12 @@
     <%= f.label :favorite_ice_cream_flavor %><br>
     <%= f.text_field :favorite_ice_cream_flavor %>
   </div>
+   <div class="field">
+    <%= f.label :address %><br>
+    <%= f.text_field :address %>
+  </div>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
