--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -8,6 +8,7 @@
       <th>Bio</th>
       <th>Profession</th>
       <th>Favorite ice cream flavor</th>
+      <th>Address</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,12 +18,15 @@
       <tr>
         <td><%= student.full_name %></td>
         <td><%= student.age %></td>
-        <td><%= student.bio %></td>
-        <td><%= student.profession %></td>
-        <td><%= student.favorite_ice_cream_flavor %></td>
+        <td><%= short student.bio %></td>
+        <!-- <td> short_bio student </td>%-->
+        <td><%= short student.profession %></td>
+        <td><%= short student.favorite_ice_cream_flavor %></td>
+        <td><%= short student.address %></td>
         <td><%= link_to 'Show', student %></td>
         <td><%= link_to 'Edit', edit_student_path(student) %></td>
         <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
       </tr>
     <% end %>
   </tbody>
